jsonapi_core/tests/compile_fail/non_string_id.rs
use jsonapi_core::JsonApi;

#[derive(Debug, Clone, PartialEq, JsonApi)]
#[jsonapi(type = "things")]
struct Thing {
    #[jsonapi(id)]
    id: u32,
    title: String,
}

fn main() {}
