jsonapi_core/tests/compile_fail/non_string_id.stderr
error: #[jsonapi(id)] field must be String or Option<String>
 --> tests/compile_fail/non_string_id.rs:7:5
  |
7 |     id: u32,
  |     ^^
